# grocereasy

./: .flake8  .gitignore  Dockerfile  README.md  local_build.sh  mypy.ini  pyproject.toml
.github/workflows/: pipeline.yml
infrastructure/base/: artifacts-appspot-com.tf  variables.tf
infrastructure/base/ArtifactRegistryRepository/: docker-images.tf
infrastructure/base/BigQueryDataset/: jobs.tf  supermarket.tf
infrastructure/base/BigQueryTable/: items.tf  jobs.tf
infrastructure/base/IAMServiceAccount/: terraform-owner.tf
infrastructure/base/LoggingLogSink/: a-default.tf  a-required.tf
infrastructure/base/PubSubSubscription/: dead.tf  orchestrator-completed.tf  storer-completed.tf  triggers.tf  worker-completed.tf
infrastructure/base/PubSubTopic/: dead.tf  orchestrator-completed.tf  storer-completed.tf  triggers.tf  worker-completed.tf
infrastructure/production/: main.tf  terraform.tfstate.backup
infrastructure/production/ComputeDisk/: storer.tf  (+2 more)
project/: main.py
project/common/: __init__.py  bigquery.py  config.py  constants.py  consumer.py  exceptions.py  item.py  job.py  messages.py  publisher.py  serializer.py  table.py  utility.py
project/orchestrator/: config.py  constants.py  main.py  orchestrator.py  table.py
project/runtime/: __init__.py  log.py  setup_.py
project/storer/: config.py  main.py  storer.py
project/worker/: config.py  main.py  worker.py
scripts/: automatic_grocery.py  store_all_jobs.py  trigger.py
tests/: conftest.py  constants.py  helpers.py
tests/common/: test_utility.py
tests/orchestrator/: test_orchestrator.py
(+46 files in other folders)
